# CXXCrafter-Community-Edition

./: .gitignore  README.md  pyproject.toml
data/: README.md  awesome_cpp_dataset.csv  top100_dataset.csv
docs/: AQ1-unresolved issue.md  AQ1-unresolved_issue.md  BQ1-missing_dependency.md  Q1-success_metric.md  validation_results.md
script/: build_system_statistic.py  clone_and_update_github_repo.py  compare.py  count_for_build_system.txt  count_for_build_system_top100.txt  get_repo_from_oss_fuzz.py  gitcloneerror.txt  remove_other_repo.py  temp.py
script/github_repo_collector/: github_crawler.py  github_statistics.py
src/: cxxcrafter.py  run.py
src/CXXCrafter_CE.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cxxcrafter/: __init__.py  __main__.py  cli.py  config.py  debug.py  init.py  log_utils.py  run.py  run4oss.py  utils.py
src/cxxcrafter.egg-info/: PKG-INFO  SOURCES.txt
src/cxxcrafter/execution_module/: __init__.py  discriminator.py  docker_manager.py
src/cxxcrafter/generation_module/: __init__.py  utils.py
src/cxxcrafter/llm/: bot.py
src/cxxcrafter/memory_module/: docs_writer.py
src/cxxcrafter/parsing_module/: __init__.py  dependency_parser.py  doc_parser.py  environment_parser.py
src/cxxcrafter_ce.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/execution_module/: __init__.py  discriminator.py  docker_manager.py  utils.py
src/generation_module/template/: dockerfile_template.py
src/llm/: bot.py
src/parsing_module/: __init__.py  dependency_parser.py  environment_parser.py
(+10 files in other folders)
